Add the debugging and model evaluation to the readme

--- a/jupyter_notebooks/ModellingAndEvaluating.ipynb
+++ b/jupyter_notebooks/ModellingAndEvaluating.ipynb
@@ -563,7 +563,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -599,6 +599,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Confusion Matrix saved at: outputs/v1/confusion_matrix.png\n",
       "Accuracy: 1.00\n",
       "Number of misclassified images: 2\n"
      ]
@@ -644,14 +645,27 @@
     "print(\"\\nClassification Report:\")\n",
     "print(classification_report(ground_truth_labels, predicted_labels))\n",
     "\n",
-    "# Confusion Matrix\n",
+    "# Confusion Matrix: Display and Save\n",
     "cm = confusion_matrix(ground_truth_labels, predicted_labels, labels=list(target_map.values()))\n",
+    "\n",
+    "# Set up output directory\n",
+    "output_dir = 'outputs/v1'\n",
+    "os.makedirs(output_dir, exist_ok=True)  # Ensure the directory exists\n",
+    "conf_matrix_path = os.path.join(output_dir, 'confusion_matrix.png')\n",
+    "\n",
+    "# Plot and save the confusion matrix\n",
     "plt.figure(figsize=(8, 6))\n",
     "sns.heatmap(cm, annot=True, fmt=\"d\", cmap=\"Blues\", xticklabels=list(target_map.values()), yticklabels=list(target_map.values()))\n",
     "plt.title(\"Confusion Matrix\")\n",
     "plt.xlabel(\"Predicted Labels\")\n",
     "plt.ylabel(\"True Labels\")\n",
+    "\n",
+    "# Save the plot\n",
+    "plt.savefig(conf_matrix_path, bbox_inches='tight')\n",
     "plt.show()\n",
+    "plt.close()\n",
+    "\n",
+    "print(f\"Confusion Matrix saved at: {conf_matrix_path}\")\n",
     "\n",
     "# Accuracy\n",
     "accuracy = accuracy_score(ground_truth_labels, predicted_labels)\n",
