Add information to Mildew_Detection.py and Project_Hypothesis_Validation.py

--- a/jupyter_notebooks/ModellingAndEvaluating.ipynb
+++ b/jupyter_notebooks/ModellingAndEvaluating.ipynb
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -328,7 +328,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-11-19 11:06:51.999550: I tensorflow/core/platform/cpu_feature_guard.cc:142] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  AVX2 FMA\n",
+      "2024-12-02 13:46:25.421418: I tensorflow/core/platform/cpu_feature_guard.cc:142] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  AVX2 AVX512F FMA\n",
       "To enable them in other operations, rebuild TensorFlow with the appropriate compiler flags.\n"
      ]
     }
@@ -362,29 +362,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2024-12-02 13:46:25.743086: I tensorflow/compiler/mlir/mlir_graph_optimization_pass.cc:185] None of the MLIR Optimization Passes are enabled (registered 2)\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "Epoch 1/25\n",
-      "148/148 [==============================] - 158s 1s/step - loss: 0.0185 - accuracy: 0.9956 - val_loss: 5.0444e-04 - val_accuracy: 1.0000\n",
+      "148/148 [==============================] - 297s 2s/step - loss: 0.3807 - accuracy: 0.8254 - val_loss: 0.0486 - val_accuracy: 0.9881\n",
       "Epoch 2/25\n",
-      "148/148 [==============================] - 153s 1s/step - loss: 0.0330 - accuracy: 0.9898 - val_loss: 0.0154 - val_accuracy: 0.9952\n",
+      "148/148 [==============================] - 291s 2s/step - loss: 0.0803 - accuracy: 0.9732 - val_loss: 0.0386 - val_accuracy: 0.9881\n",
       "Epoch 3/25\n",
-      "148/148 [==============================] - 153s 1s/step - loss: 0.0166 - accuracy: 0.9942 - val_loss: 2.7908e-04 - val_accuracy: 1.0000\n",
+      "148/148 [==============================] - 289s 2s/step - loss: 0.0458 - accuracy: 0.9857 - val_loss: 0.0076 - val_accuracy: 0.9952\n",
       "Epoch 4/25\n",
-      "148/148 [==============================] - 154s 1s/step - loss: 0.0013 - accuracy: 0.9997 - val_loss: 1.0241e-05 - val_accuracy: 1.0000\n",
-      "Epoch 5/25\n",
-      "148/148 [==============================] - 162s 1s/step - loss: 7.9881e-04 - accuracy: 1.0000 - val_loss: 1.0501e-06 - val_accuracy: 1.0000\n",
-      "Epoch 6/25\n",
-      "148/148 [==============================] - 149s 1s/step - loss: 0.0180 - accuracy: 0.9959 - val_loss: 0.0028 - val_accuracy: 0.9976\n",
-      "Epoch 7/25\n",
-      "148/148 [==============================] - 156s 1s/step - loss: 0.0407 - accuracy: 0.9871 - val_loss: 0.0604 - val_accuracy: 0.9810\n",
-      "Epoch 8/25\n",
-      "148/148 [==============================] - 154s 1s/step - loss: 0.0127 - accuracy: 0.9963 - val_loss: 2.2514e-06 - val_accuracy: 1.0000\n"
+      " 77/148 [==============>...............] - ETA: 2:14 - loss: 0.0177 - accuracy: 0.9942"
      ]
     }
    ],
@@ -407,11 +406,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "model.save(f'{output_dir}/mildew_detector_model.h5')"
+    "model.save('outputs/model/v1/your_trained_model.h5')"
    ]
   },
   {
@@ -423,7 +422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -472,7 +471,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -506,7 +505,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -563,7 +562,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
